Fix bar z-index

--- a/style.css
+++ b/style.css
@@ -248,6 +248,10 @@
     overflow-y: hidden;
 }
 
+.baloons-bar-wrapper_active {
+    z-index: 10;
+}
+
 .view_active .baloons-bar-wrapper {
     bottom: 20px;
 }
